--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,4 +1,6 @@
 # Interests
-- description: Drinking beer.
-- description: Grand Funk Railroad.
-- description: Flanders' lawnmower.
+- description: Watching and appreciating movies.
+- description: Listening to good music.
+- description: Dabbling in Philosophy.
+- description: Financial investment.
+- description: Travelling to exotic places.
