--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -1,11 +1,15 @@
 # Associations
-- organization: Beer for the World
+- organization: Dev Club IIT Delhi
+  role: Member
+  year: 2017 &mdash; Present
+  summary: Working on interesting web or software developement projects with other like-minded student developers of IIT Delhi.
+
+- organization: Entrepreneurship Development Cell
+  role: Technical Executive
+  year: 2017 &mdash; Present
+  summary: The Entrepreneurship Development Cell (eDC), IIT Delhi is a cell which aims to support and augment the efforts of budding entrepreneurs in the college level to get established as a successful and independent entrepreneurs.
+
+- organization: National Service Scheme (NSS) IIT Delhi
   role: Volunteer
-  year: 2008 &mdash; Present
-  summary: Organized fund drives and participated in fundraising events for the benefit of families in third world countries without proper access to malt beverages.
-
-
-- organization: Springfield Nuclear Workers Labor Union
-  role: Member in Good Standin
-  year: 1994 &mdash; Present
-  summary: Founding member of the local nuclear workers labor union.
+  year: 2016 &mdash; Present
+  summary: Indulge in nation building activities through various events and projects which are aimed towards the benefit of people in and around IIT Delhi.
