--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,19 +1,18 @@
 # Jobs
-# Springfield Nuclear Power Plant
-- company: Springfield Nuclear Power Plant
-  position: Safety Inspector
-  duration: Nov, 1980 &mdash; Present
-  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>Ate lots of donuts</li><li>Fell asleep rarely</li><li>Left promptly at end of day (sometimes earlier)</li></ul>
+# Technical Consulting
+- company: Sumit Ghosh Consulting
+  position: Software Development and QA Automation Consultant
+  duration: Oct, 2017 &mdash; Present
+  summary: Offering software development consultation and automated software-testing cum quality-assurance solutions as an independent contractor.
 
 # Windmill Crank Operator
-- company: Sir Putt-A-Lot's Merrie Olde Fun Centre
-  position: Safety Inspector
-  duration:  Jun, 1978 &mdash; Sept, 1979
-  summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
+- company: eDC (Entrepreneurship Development Cell) - IIT Delhi 
+  position: Technical Executive
+  duration: Sep, 2017 &mdash; Present
+  summary: Handling all the technical management work at eDC. Also developing and maintaining the official website of eDC-IITD. 
 
-
-# Front Desk Attendant
-- company: Simpson Lazer Tag
-  position: Front Desk Attendant
-  duration:   Jun, 1975  &mdash; May, 1978
-  summary: Boy, when Marge first told me she was going to the Police Academy, I thought it would be fun and exciting, you know, like the movie... Spaceballs. But instead, it's been painful and disturbing, like the movie Police Academy.
+# Freelance consulting and programming
+- company: Upwork
+  position: Freelance Consultant and Programmer
+  duration: Jan, 2016  &mdash; Present
+  summary: <ul class="resume-item-list"><li>Worked on 30+ small to largely sized contracts</li><li>Out of 23 feedbacks, 17 are 5-star. Average feedback - 4.74</li><li>Job satisfaction score - 86%</li></ul>
