--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,5 +1,3 @@
 # links
-- url: "#"
-  description: Springfield Poker Club
-- url: "#"
-  description: Springfield Donut Eater's User Group
+- url: "https://techkernel.org"
+  description: Tech-kernel. My blog. Mostly technical.
