--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,20 @@
 # Degree
 - degree: B.Tech and M.Tech, Computer Science and Engineering
   uni: Indian Institute of Technology (IIT) Delhi
-  year: 2016 &mdash; 2021
-  awards: null
+  year: 2016 &mdash; Present
+  awards: <ul><li>Was among the top 0.075 percentile in the entrance exam (JEE)</li><li>Cumulative GPA of 7.0</li></ul>
+  summary: null
+
+# Degree
+- degree: Higher Secondary (WBCHSE) (Standard 12) 
+  uni: Bidhan Chandra Institution, Durgapur
+  year: 2014 &mdash; 2026
+  awards: 90% marks in the finals.
+  summary: null
+
+# Degree
+- degree: Secondary (WBBSE) (Standard 10) 
+  uni: Ramakrishna Mission Vidyapith, Purulia
+  year: 2008 &mdash; 2014
+  awards: 92% marks in the finals.
   summary: null
