--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,15 +1,15 @@
 # Jobs
+# IITD CSE Updaters
+- company: Department of Computer Science, IIT Delhi
+  position: SysAdmin (System Administrator) 
+  duration: Nov, 2017 &mdash; Present
+  summary: Responsible for the upkeep, configuration, and reliable operation of computer systems and servers of IIT Delhi's Computer Science Department.
+
 # Technical Consulting
 - company: Sumit Ghosh Consulting
   position: Software Development and QA Automation Consultant
   duration: Oct, 2017 &mdash; Present
   summary: Offering software development consultation and automated software-testing cum quality-assurance solutions as an independent contractor.
-
-# Windmill Crank Operator
-- company: eDC (Entrepreneurship Development Cell) - IIT Delhi 
-  position: Technical Executive
-  duration: Sep, 2017 &mdash; Present
-  summary: Handling all the technical management work at eDC. Also developing and maintaining the official website of eDC-IITD. 
 
 # Freelance consulting and programming
 - company: Upwork
