--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,6 +1,5 @@
 # Interests
 - description: Watching and appreciating movies.
-- description: Listening to good music.
 - description: Dabbling in Philosophy.
-- description: Financial investment.
+- description: Financial economics.
 - description: Travelling to exotic places.
