--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,3 +1,3 @@
 # links
-- url: "https://techkernel.org"
-  description: Tech-kernel. My blog. Mostly technical.
+- url: "https://sumit-ghosh.com"
+  description: My personal website double-serving as a blog. Mostly technical.
