Trying to fix the education section

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -2,7 +2,7 @@
 - degree: B.Tech and M.Tech, Computer Science and Engineering
   uni: Indian Institute of Technology (IIT) Delhi
   year: 2016 &mdash; Present
-  awards: <ul><li>Was among the top 0.075 percentile in the entrance exam (JEE)</li><li>Cumulative GPA of 7.0</li></ul>
+  awards: <li>Was among the top 0.075 percentile in the entrance exam (JEE)</li><li>Cumulative GPA of 7.0</li>
   summary: null
 
 # Degree
