--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ resume_section_education:       true
 resume_section_projects:        true
 resume_section_skills:          true
 resume_section_recognition:     false
-resume_section_links:           true
+resume_section_links:           false
 resume_section_associations:    true
 resume_section_interests:       false
 resume_section_courses:         true
