--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -34,7 +34,6 @@
     - Github API
   description: App to write journal digitally. It lets you write your journal using Markdown in your favorite text-editor, stores written journals in a comprehensive directory structure and lets you view the journals (Markdown rendered in HTML) in browser.
 
-#Springfield Donut Eater's User Group
 - project: Data Structures and Algorithms Projects
   mentor: Prof. Mausam | Prof. Sedgewick
   duration: July &mdash; November, 2017
@@ -44,12 +43,13 @@
     - Java
   description: These are projects I did related to Data Structures and Algorithms.
   subprojects: 
-    - name: Image Compression System
-      description: Encode a given monochrome image in a compact format and perform operations like Inversion and Morphing (SetPixel and XOR, AND, OR with another image) on this format. The idea was to use the redundancy in the pixel value information among neighboring pixels, reducing the amount of information to be stored.
     - name: 8‑Puzzle Solver
       description: Finds the most cost-effective way to solve a given 8-puzzle. Implemented using Djikstra's and A-star algorithms.
+    - name: Image Compression System
+      description: Encode a given monochrome image in a compact format and perform operations like Inversion and Morphing (SetPixel and XOR, AND, OR with another image) on this format. The idea was to use the redundancy in the pixel value information among neighboring pixels, reducing the amount of information to be stored.
+    - name: Percolation Simulator
+      description: Implemented using Union-Find data structure, it simulates percolation behavior of fluids.
 
-# Springfield Donut Eater's User Group
 - project: Digital System Design in VHDL
   mentor: Prof. Anshul Kumar
   duration: August &mdash; November, 2017
