--- a/_config.yml
+++ b/_config.yml
@@ -43,13 +43,13 @@ resume_section_courses:         true
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
   resume_github_url:            "https://github.com/SkullTech"
-  resume_twitter_url:           "http://twitter.com/SkullTech101"
+  # resume_twitter_url:           "http://twitter.com/SkullTech101"
   # resume_dribbble_url:          "https://dribbble.com/jag"
-  resume_facebook_url:          "https://www.facebook.com/sanju.ghosh"
-  resume_linkedin_url:          "https://www.linkedin.com/in/sumit-ghosh-skulltech/"
-  resume_instagram_url:         "https://www.instagram.com/sumit.ghosh101"
+  # resume_facebook_url:          "https://www.facebook.com/sanju.ghosh"
+  # resume_linkedin_url:          "https://www.linkedin.com/in/sumit-ghosh-skulltech/"
+  # resume_instagram_url:         "https://www.instagram.com/sumit.ghosh101"
   resume_website_url:           "http://techkernel.org"
-resume_print_social_links:      false
+resume_print_social_links:      true
 
 # Design settings
 resume_theme:                   default
