Add C++ to skills

--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -8,7 +8,7 @@
   description: Scraping data from the web using libraries like requests and lxml or powerful frameworks like Scrapy
 
 # Programming Languages
-- skill: Programming Languages - Python, Java, Ocaml
+- skill: Programming Languages - Python, Java, C++, Ocaml
   description: Programming proficiently in the above mentioned languages
 
 # Web Development
