Change top header text

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ resume_avatar:                  "true"
 resume_name:                    "Sumit Kumar Ghosh"
 resume_title:                   "IIT Delhi"
 resume_contact_email: "sumit@sumit-ghosh.com"
-resume_header_contact_info: Satpura Hostel, IIT Delhi, New Delhi, India  <div style="float:right">sumit@sumit-ghosh.com</div>
+resume_header_contact_info: Computer Science Underrad, IIT Delhi <div style="float:right">sumit@sumit-ghosh.com</div>
 resume_header_intro: <p>I'm a passionate consultant specializing in <b>Browser automation and testing of web-apps using Selenium Webdriver</b>.<br>I'm also proficient in -<ul class="resume-item-list"><li>Browser automation and testing of web-apps using Selenium Webdriver</li><li>Web-scraping using simple libraries like lxml, Requests, and BeautifulSoup or by using powerful frameworks like Scrapy</li><li>Web APIs like Google Search, Gmail, Twitter, Reddit, Steam etc.</li><li>Web-development (especially back-end) using Django or Flask</li></ul></p><p>Currently undergrad student at IIT Delhi, I've been working as a freelance programmer and consultant at Upwork for about 2 years. I'm an ambitious person who's always trying to improve himself, someone fascinated by movies, music, philosophy and travel.</p><p>Right now, I'm looking for opportunities which can be a learning experience. I'd be glad to help you, drop me an email at <b><span>sumit</span><b>@</b>sumit-ghosh.com</b>, or just click on the 'Contact Me' button below.
 resume_contact_telephone:       "555-7334"
 resume_contact_address:         "742 Evergreen Terrace, Springfield"
