Make the courses paragraph style

--- a/_data/courses.yml
+++ b/_data/courses.yml
@@ -1,12 +1,18 @@
-- Introduction to Computer Science
-- Data Structures and Algorithms
-- Algorithms, Part 1 by Princeton University^
-- Digital Logic and System Design
-- Computer Architecture*
-- Programming Languages*
-- Principles of Electronic Materials
-- Signals and Systems*
-- Discrete Mathematical Structures
-- Linear Algebra and Differential Equations,
-- Introduction to Calculus
-- Design Practices*
+list: 
+  - Introduction to Computer Science
+  - Data Structures and Algorithms
+  - Algorithms, Part 1 by Princeton University^
+  - Digital Logic and System Design
+  - Computer Architecture*
+  - Programming Languages*
+  - Principles of Electronic Materials
+  - Signals and Systems*
+  - Discrete Mathematical Structures
+  - Linear Algebra and Differential Equations,
+  - Introduction to Calculus
+  - Design Practices*
+
+paragraph:
+  Introduction to Computer Science, Data Structures and Algorithms, Algorithms, Part 1 by Princeton University^, Digital Logic and System Design, Computer Architecture*, Programming Languages*, Principles of Electronic Materials, Signals and Systems*, Discrete Mathematical Structures, Linear Algebra and Differential Equations,, Introduction to Calculus, Design Practices*
+
+paragraph:
