Expand skills section

--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,4 +1,9 @@
 # Skills
+
+# Programming Languages
+- skill: Programming Languages - Python, Java, c, C++, Ocaml, VHDL, ARM Assembly
+  description: Programming proficiently in the above mentioned languages
+
 # Automated testing
 - skill: Browser automation | Automated software-testing and Quality Assurance
   description: Using QA frameworks like Selenium and Appium to automate software-testing
@@ -7,10 +12,9 @@
 - skill: Web Scraping
   description: Scraping data from the web using libraries like requests and lxml or powerful frameworks like Scrapy
 
-# Programming Languages
-- skill: Programming Languages - Python, Java, C++, Ocaml
-  description: Programming proficiently in the above mentioned languages
-
 # Web Development
 - skill: Web Development using Django
   description: Back-end Web Development using Django. Basic front-end designing using Bootstrap and Javascript.
+
+- skill: System Administration and DevOps
+  description: Using containerization (Docker) and process management systems (Supervisord). Configuring and managing web-servers (Apache2 and Nginx), implementing reverse proxy and load balancers in such.
