Remove NSS desc

--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -8,5 +8,5 @@
 - organization: National Service Scheme (NSS) IIT Delhi
   role: Volunteer
   year: 2016 &mdash; Present
-  summary: Indulge in nation building activities through various events and projects which are aimed towards the benefit of people in and around IIT Delhi.
-  url: 
+  # summary: Indulge in nation building activities through various events and projects which are aimed towards the benefit of people in and around IIT Delhi.
+  # url: 
