--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -35,7 +35,7 @@
 
 # Journalist
 - project: deCAD
-  mentor: Prof. Sanjiva Prasad
+  mentor: Prof. Subhashis Banerjee
   duration: January &mdash; April, 2018
   url: https://github.com/SkullTech/deCAD
   tags: C++, QT
