Remove associations to make it two page

--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -2,11 +2,11 @@
 - organization: Dev Club IIT Delhi
   role: Member
   year: 2017 &mdash; Present
-  summary: Working on interesting web or software developement projects with other like-minded student developers of IIT Delhi.
-  url: 
+#   summary: Working on interesting web or software developement projects with other like-minded student developers of IIT Delhi.
+#   url: 
 
-- organization: National Service Scheme (NSS) IIT Delhi
-  role: Volunteer
-  year: 2016 &mdash; Present
-  # summary: Indulge in nation building activities through various events and projects which are aimed towards the benefit of people in and around IIT Delhi.
-  # url: 
+# - organization: National Service Scheme (NSS) IIT Delhi
+#   role: Volunteer
+#   year: 2016 &mdash; Present
+#   summary: Indulge in nation building activities through various events and projects which are aimed towards the benefit of people in and around IIT Delhi.
+#   url: 
