--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -6,10 +6,10 @@
   summary: Responsible for the upkeep, configuration, and reliable operation of computer systems and servers of IIT Delhi's Computer Science Department.
 
 # Technical Consulting
-# - company: Sumit Ghosh Consulting
-#   position: Software Development and QA Automation Consultant
-#   duration: Oct, 2017 &mdash; Present
-#   summary: Offering software development consultation and automated software-testing cum quality-assurance solutions as an independent contractor.
+- company: Sumit Ghosh Consulting
+  position: Software Development and QA Automation Consultant
+  duration: Oct, 2017 &mdash; Present
+  summary: Offering software development consultation and automated software-testing cum quality-assurance solutions as an independent contractor.
 
 # Freelance consulting and programming
 - company: Upwork
