--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,11 +1,11 @@
 # Skills
 
 # Programming Languages
-- skill: Programming Languages - Python, Java, c, C++, Ocaml, VHDL, ARM Assembly
+- skill: Programming Languages - Python, Java, C, C++, Ocaml, VHDL, ARM Assembly
   description: Programming proficiently in the above mentioned languages
 
 # Automated testing
-- skill: Browser automation | Automated software-testing and Quality Assurance
+- skill: Browser automation | Automated Software-testing and Quality Assurance
   description: Using QA frameworks like Selenium and Appium to automate software-testing
 
 # Automated testing
@@ -13,8 +13,8 @@
   description: Scraping data from the web using libraries like requests and lxml or powerful frameworks like Scrapy
 
 # Web Development
-- skill: Web Development using Django
-  description: Back-end Web Development using Django. Basic front-end designing using Bootstrap and Javascript.
+- skill: Web Development using Django and Flask
+  description: Back-end Web Development using Django and Flask. Basic front-end designing using Bootstrap and Javascript.
 
 - skill: System Administration and DevOps
   description: Using containerization (Docker) and process management systems (Supervisord). Configuring and managing web-servers (Apache2 and Nginx), implementing reverse proxy and load balancers in such.
