--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@ plugins:
 resume_avatar:                  "true"
 resume_name:                    "Sumit Kumar Ghosh"
 resume_title:                   "IIT Delhi"
-resume_contact_email: "sumit@sumit-ghosh.com"
-resume_header_contact_info: Computer Science Undergrad, IIT Delhi <div style="float:right">sumit@sumit-ghosh.com</div>
-resume_header_intro: <p>I'm a passionate consultant specializing in <b>Browser automation and testing of web-apps using Selenium Webdriver</b>.<br>I'm also proficient in -<ul class="resume-item-list"><li>Browser automation and testing of web-apps using Selenium Webdriver</li><li>Web-scraping using simple libraries like lxml, Requests, and BeautifulSoup or by using powerful frameworks like Scrapy</li><li>Web APIs like Google Search, Gmail, Twitter, Reddit, Steam etc.</li><li>Web-development (especially back-end) using Django or Flask</li></ul></p><p>Currently undergrad student at IIT Delhi, I've been working as a freelance programmer and consultant at Upwork for about 2 years. I'm an ambitious person who's always trying to improve himself, someone fascinated by movies, music, philosophy and travel.</p><p>Right now, I'm looking for opportunities which can be a learning experience. I'd be glad to help you, drop me an email at <b><span>sumit</span><b>@</b>sumit-ghosh.com</b>, or just click on the 'Contact Me' button below.
+resume_contact_email:           "sumit@sumit-ghosh.com"
+resume_header_contact_info:     Computer Science Undergrad, IIT Delhi <div style="float:right">sumit@sumit-ghosh.com</div>
+resume_header_intro:            <p>I'm a passionate consultant specializing in <b>Browser automation and testing of web-apps using Selenium Webdriver</b>.<br>I'm also proficient in -<ul class="resume-item-list"><li>Browser automation and testing of web-apps using Selenium Webdriver</li><li>Web-scraping using simple libraries like lxml, Requests, and BeautifulSoup or by using powerful frameworks like Scrapy</li><li>Web APIs like Google Search, Gmail, Twitter, Reddit, Steam etc.</li><li>Web-development (especially back-end) using Django or Flask</li></ul></p><p>Currently undergrad student at IIT Delhi, I've been working as a freelance programmer and consultant at Upwork for about 2 years. I'm an ambitious person who's always trying to improve himself, someone fascinated by movies, music, philosophy and travel.</p><p>Right now, I'm looking for opportunities which can be a learning experience. I'd be glad to help you, drop me an email at <b><span>sumit</span><b>@</b>sumit-ghosh.com</b>, or just click on the 'Contact Me' button below.
 resume_contact_telephone:       "555-7334"
 resume_contact_address:         "742 Evergreen Terrace, Springfield"
 
@@ -43,12 +43,12 @@ resume_section_courses:         true
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
   resume_github_url:            "https://github.com/SkullTech"
-  # resume_twitter_url:           "http://twitter.com/SkullTech101"
+  resume_twitter_url:           "http://twitter.com/SkullTech101"
   # resume_dribbble_url:          "https://dribbble.com/jag"
   # resume_facebook_url:          "https://www.facebook.com/sanju.ghosh"
-  # resume_linkedin_url:          "https://www.linkedin.com/in/sumit-ghosh-skulltech/"
+  resume_linkedin_url:          "https://www.linkedin.com/in/sumit-ghosh-skulltech/"
   # resume_instagram_url:         "https://www.instagram.com/sumit.ghosh101"
-  resume_website_url:           "http://techkernel.org"
+  resume_website_url:           "https://sumit-ghosh.com"
 resume_print_social_links:      false
 
 # Design settings
